--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <div class="border-[1px] flex  w-[500px] mx-auto input h-[54px] rounded-full border-gray-500">
       <div
         class="h-[40px] flex mt-[5px] ml-[8px] py-[1px] pick bg-gray-400 w-[140px] border-[1px] rounded-full border-gray-500 ">
-        <img src="./images/avatar.png" class="h-[32px] w-[32px] ml-[3px] mt-[2px]" alt="">
+        <img src="./images/Avatar.png" class="h-[32px] w-[32px] ml-[3px] mt-[2px]" alt="">
         <h3 class="text-[13px] text-white font-bold pt-[8px] pl-[6px]">Emma james</h3>
       </div>
       <div
         class="h-[40px] flex mt-[5px] ml-[8px] py-[1px] pick bg-gray-400 w-[140px] border-[1px] rounded-full border-gray-500 ">
-        <img src="./images/avatar.png" class="h-[32px] w-[32px] ml-[3px] mt-[2px]" alt="">
+        <img src="./images/Avatar2.png" class="h-[32px] w-[32px] ml-[3px] mt-[2px]" alt="">
         <h3 class="text-[13px] text-white font-bold pt-[8px] pl-[6px]">Jim fanges</h3>
       </div>
     </div>
