--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <div class="pt-[8px]">
           <label for="review-title" class="text-[0.8rem] font-bold ">Product review</label>
           <textarea name="review-text" id="review-text"
-            class="w-full h-[50px] border-[1px] border-gray-300 text-gray-400" placeholder="">
-          Example: Since i bought this a month ago, its been used alot. what i like best/worst about this product ... 
+            class="w-full h-[50px] border-[1px] border-gray-300 text-gray-400" placeholder="">Example: Since i bought this a month ago, its been used alot. what i like best/worst about this product ... 
          </textarea>
         </div>
         <div class="flex pt-[12px] pb-[7px]">
